# python-event

./: .gitignore  README.md  pyproject.toml
.wex/: config.yml
.wex/knowledge/dev/: roadmap.md
.wex/knowledge/readme/: api-reference.md  examples.md  introduction.md  quickstart.md
.wex/python/app_manager/: requirements.txt
.wex/tmp/: registry.yml
examples/various/: simple_event_example.py
src/wexample_event/: PLAN.md  __init__.py
src/wexample_event/common/: __init__.py  dispatcher.py  listener.py  listener_spec.py  listener_state.py  priority.py
src/wexample_event/common/dataclass/: __init__.py  event.py
src/wexample_event/dataclass/: event.py  listener_record.py  listener_spec.py
tests/package/common/: test_bubbling.py  test_dispatcher.py  test_listener.py  test_listener_state.py  test_priority.py
tests/package/dataclass/: test_event.py  test_listener_record.py  test_listener_spec.py
tests/various/: test_dispatcher.py  test_event.py  test_listener.py  test_listener_record.py  test_listener_spec.py  test_listener_state.py  test_priority.py
